[gd_scene load_steps=11 format=2]

[ext_resource path="res://zombie/zombie.gd" type="Script" id=1]
[ext_resource path="res://zombie/zombie.png" type="Texture" id=2]
[ext_resource path="res://font/MatchupPro.otf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.7 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idol"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 0.7, 1.1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "parou"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 9 )

[sub_resource type="CircleShape2D" id=3]
radius = 6.7082

[sub_resource type="CircleShape2D" id=2]
radius = 176.0

[node name="zombie" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.08616e-07, -2.38419e-07 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idol"
anims/RESET = SubResource( 5 )
anims/idol = SubResource( 6 )
anims/parou = SubResource( 7 )

[node name="Label" type="Label" parent="."]
margin_top = -16.0
margin_right = 16.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="area_hit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_hit"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="area_hit" to="." method="_on_area_hit_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
